force-app/main/default/objects/Project_Status__c/Project_Status__c.object-meta.xml
<CustomObject>
    <description>Project Status Object.</description>
    <label>Project Status</label>
    <nameField>
        <displayFormat>PST{000000}</displayFormat>
        <label>Project Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>