force-app/main/default/objects/Project_Status__c/fields/Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments__c</fullName>
    <label>Accomplishments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>