force-app/main/default/objects/Project_Status__c/fields/Additional_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Support_Needed__c</fullName>
    <label>Additional Support Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>