force-app/main/default/objects/Project_Status__c/fields/Budgeted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Margin__c</fullName>
    <formula>Project__r.Total_Budgeted_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>