force-app/main/default/objects/Project_Status__c/fields/Budgeted_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Margin_Percentage__c</fullName>
    <formula>Project__r.Budgeted_Margin_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Margin Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>