force-app/main/default/objects/Project_Status__c/fields/Budgeted_T_E_Cost__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_T_E_Cost__c</fullName>
    <formula>Project__r.Total_Budgeted_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted T&amp;E Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>