force-app/main/default/objects/Project_Status__c/fields/Date_Needed_From__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed_From__c</fullName>
    <label>Date Needed From</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>