force-app/main/default/objects/Project_Status__c/fields/Date_Needed_To__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed_To__c</fullName>
    <label>Date Needed To</label>
    <type>Date</type>
</CustomField>