force-app/main/default/objects/Project_Status__c/fields/Deliverable3__c.field-meta.xml
<CustomField>
    <fullName>Deliverable3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deliverable</label>
    <referenceTo>Project_Status_Deliverable__c</referenceTo>
    <relationshipLabel>Project Status (Deliverable)</relationshipLabel>
    <relationshipName>Project_Status2</relationshipName>
    <type>Lookup</type>
</CustomField>