force-app/main/default/objects/Project_Status__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deliverable</label>
    <referenceTo>Project_Status_Deliverable__c</referenceTo>
    <relationshipLabel>Project Status</relationshipLabel>
    <relationshipName>Project_Status</relationshipName>
    <type>Lookup</type>
</CustomField>