force-app/main/default/objects/Project_Status__c/fields/Description_of_Support_Needed2__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Support_Needed2__c</fullName>
    <label>Description of Support Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>