force-app/main/default/objects/Project_Status__c/fields/Engagement_Level_Or_Deliverable3__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level_Or_Deliverable3__c</fullName>
    <label>Engagement Level Or Deliverable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>