force-app/main/default/objects/Project_Status__c/fields/Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager__c</fullName>
    <formula>Project__r.pse__Project_Manager__r.FirstName &amp; &quot; &quot; &amp;  Project__r.pse__Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Manager</label>
    <type>Text</type>
</CustomField>