force-app/main/default/objects/Project_Status__c/fields/Engagement_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager_Email__c</fullName>
    <formula>Project__r.pse__Project_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Manager Email</label>
    <type>Text</type>
</CustomField>