force-app/main/default/objects/Project_Status__c/fields/M1__c.field-meta.xml
<CustomField>
    <fullName>M1__c</fullName>
    <label>M1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>