force-app/main/default/objects/Project_Status__c/fields/M2__c.field-meta.xml
<CustomField>
    <fullName>M2__c</fullName>
    <label>M2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>