force-app/main/default/objects/Project_Status__c/fields/M3__c.field-meta.xml
<CustomField>
    <fullName>M3__c</fullName>
    <label>M3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>