force-app/main/default/objects/Project_Status__c/fields/Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percentage__c</fullName>
    <formula>Project__r.Margin_Percentage_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>