force-app/main/default/objects/Project_Status__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Project Status</relationshipLabel>
    <relationshipName>Project_Status</relationshipName>
    <type>Lookup</type>
</CustomField>