force-app/main/default/objects/Project_Status__c/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <formula>Project__r.pse__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>