force-app/main/default/objects/Project_Status__c/fields/R1__c.field-meta.xml
<CustomField>
    <fullName>R1__c</fullName>
    <label>R1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>