force-app/main/default/objects/Project_Status__c/fields/R2__c.field-meta.xml
<CustomField>
    <fullName>R2__c</fullName>
    <label>R2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>