force-app/main/default/objects/Project_Status__c/fields/R3__c.field-meta.xml
<CustomField>
    <fullName>R3__c</fullName>
    <label>R3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>