force-app/main/default/objects/Project_Status__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <label>Reporting Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>