force-app/main/default/objects/Project_Status__c/fields/T_E_Cost__c.field-meta.xml
<CustomField>
    <fullName>T_E_Cost__c</fullName>
    <formula>Project__r.Total_Internal_Costs_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;E Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>