force-app/main/default/objects/Project_Status__c/fields/Timeline_Progress_Weelk__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Progress_Weelk__c</fullName>
    <label>Timeline Progress Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>