force-app/main/default/objects/Project_Status__c/fields/Total_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Total_Weeks__c</fullName>
    <formula>(Project_End_Date__c -  Project_Start_Date__c) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>