force-app/main/default/objects/Project_Status__c/fields/Upcoming_Activities__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Activities__c</fullName>
    <label>Upcoming Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>